potential fix to top bar spacing on mobile

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     letter-spacing: -1px;
     color: rgb(37, 37, 37);
     height: 175px;
-    width: max-content;
+    width: 100%;
 }
 
 .right {
